--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.5.4",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
